src/test/resources/rules/fail/NoWhitespaceBefore.java
package rules.fail;

public class NoWhitespaceBefore {
    public void method() {
        System .out.println("wrong");
    }
}
